[gd_scene load_steps=17 format=2]

[ext_resource path="res://Effects/blob_bright.png" type="Texture" id=1]
[ext_resource path="res://Player/PlayerPoison.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.388889 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.294118 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.825 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.36
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 28.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
initial_velocity_random = 0.38
angular_velocity = 401.92
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 10.0
angle = 535.8
angle_random = 1.0
scale = 2.0
scale_random = 0.8
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.333333, 0.666667 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.723077, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.780392 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.511364 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
trail_divisor = 4
trail_size_modifier = SubResource( 11 )
trail_color_modifier = SubResource( 9 )
emission_shape = 2
emission_box_extents = Vector3( 4, 4, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
color_ramp = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=13]
trail_divisor = 4
trail_size_modifier = SubResource( 11 )
trail_color_modifier = SubResource( 9 )
emission_shape = 2
emission_box_extents = Vector3( 4, 4, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0
color_ramp = SubResource( 7 )

[sub_resource type="StreamTexture" id=14]
load_path = "res://.import/dot_particle.png-bd4869c43f58ac7d29dc35aae7d5b2d0.stex"

[node name="PlayerPoison" type="Node2D"]
script = ExtResource( 2 )

[node name="PoisonFog2" type="Particles2D" parent="."]
self_modulate = Color( 0.952941, 0.952941, 0.952941, 0.341176 )
show_behind_parent = true
position = Vector2( 0, -35 )
scale = Vector2( 2, 2 )
emitting = false
amount = 130
lifetime = 2.0
process_material = SubResource( 5 )
texture = ExtResource( 1 )

[node name="PoisonSpray" type="Particles2D" parent="."]
modulate = Color( 0.835294, 1, 0.745098, 1 )
show_behind_parent = true
position = Vector2( 0, -10 )
scale = Vector2( 2, 2 )
emitting = false
amount = 220
process_material = SubResource( 12 )

[node name="PoisonSpray2" type="Particles2D" parent="."]
modulate = Color( 0.890196, 1, 0.831373, 1 )
show_behind_parent = true
position = Vector2( 0, -10 )
scale = Vector2( 2, 2 )
emitting = false
amount = 220
process_material = SubResource( 13 )
texture = SubResource( 14 )

[node name="PoisonFog" type="Particles2D" parent="."]
self_modulate = Color( 0.784314, 0.784314, 0.784314, 0.141176 )
show_behind_parent = true
position = Vector2( 0, -35 )
scale = Vector2( 2, 2 )
emitting = false
amount = 130
lifetime = 2.0
process_material = SubResource( 5 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
